Show details angular

--- a/micro-apps/show-schedule/index.html
+++ b/micro-apps/show-schedule/index.html
@@ -9,6 +9,7 @@
 
 </div>
 <button id="btnGetSchedule">Get Schedule</button>
+<script src="shell-app-client.js"></script>
 <script src="shows-schedule.js"></script>
 </body>
 </html>
